--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,7 +82,7 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2">
 								<h4>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</h4>
-                                <div id="timer" class="text-primary">
+                                <div class="timer text-primary">
                                     <p class="time"></p>
                                     <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
                                 </div>
@@ -432,7 +432,7 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-9">
                                 <dl>
                                     <dt>Дмитрий:</dt>
                                     <dd>Крайне полезный тренинг для понимания процессов в самом начале и по ходу проекта. Очень полезны знания по оценке проекта, учету рисков, организации и использованию различной статистики по проекту. Буду использовать в своем проекте</dd>
@@ -448,6 +448,7 @@
                                     <dd>Взгляд на IT-проекты со стороны руководителя - очень полезный в работе, также понравилось наличие примеров и задач, которые разбирали в группе, отличная подборка задач и демо-материалов</dd>
                                 </dl>
                             </div>
+                            <div class="col-md-3"></div>
                         </div><!-- /.row -->
 					</div>
 				</section>
@@ -491,7 +492,12 @@
 					<div class="container">
                         <div class="row">
 							<div class="col-md-12">
-								<h2>Гарантия</h2>
+								<h2 id="guarantee">Гарантия</h2>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-9">
 								<p>Еще одним примером сервиса является гарантия возврата 100% денег. Если Вас не устроят занятия/материалы/упражнения - Вы получите назад свои деньги. Этим правом можно будет воспользоваться только в течение первого занятия. В то же время, воспользовавшись им, Вы потеряете возможность участия в любых будущих программах, событиях, курсах и мероприятияхот consultpm.com</p>
 							</div>
                         </div><!-- /.row -->
@@ -501,10 +507,111 @@
 				<section class="buy-container">
 					<div class="container">
                         <div class="row">
-
+                            <div class="col-md-12">
+								<h2 id="buy">А что у других?</h2>
+                                <ul>
+                                    <li>На рынке отсутствуют аналоги подобной цельной программы</li>
+                                    <li>На рынке существуют отдельные курсы по отдельным темам, не дающие полной картины, обучающие только одному какому-то навыку за один курс</li>
+                                    <li>К примеру, на рынке один курс «планирование проекта» обойдется вам примерно в $200-$500</li>
+                                    <li>В данной цельной программе аж 92 тематики. Если умножить каждую тему по минимуму на $200, то получим стоимость курса в $18.400. У вас есть шанс получить все эти знания и навыки в 10 раз дешевле!</li>
+                                </ul>
+                            </div>
                         </div><!-- /.row -->
+                        <div class="row study-forms study-prices">
+							<div class="col-md-4 form fundamental">
+								<h3>Fundamentals</h3>
+								<div class="form-label">За 4 месяца</div>
+								<ul>
+									<li>208 часов</li>
+									<li>13 недель (4 месяца)</li>
+                                    <li class="price"><span class="currency">$</span>1.390</li>
+								</ul>
+								<div>
+									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+								</div>
+							</div>
+							<div class="col-md-4 form senior">
+								<h3>Senior</h3>
+								<div class="form-label">За 3 месяца</div>
+								<ul>
+									<li>168 часов</li>
+									<li>11 недель (3 месяца)</li>
+                                    <li class="price"><span class="currency">$</span>1.890</li>
+								</ul>
+								<div>
+									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+								</div>
+							</div>
+							<div class="col-md-4 form expert">
+								<h3>Expert</h3>
+								<div class="form-label">За 2 месяца</div>
+								<ul>
+									<li>96 часов</li>
+									<li>6 недель (2 месяца)</li>
+                                    <li class="price"><span class="currency">$</span>1.990</li>
+								</ul>
+								<div>
+									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+								</div>
+							</div>
+						</div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p>Старт программы: <strong>1 февраля 2016</strong></p>
+                                <p>Оплату возможно разбить на <strong>3 платежа:</strong></p>
+                                <ol>
+                                    <li><strong>40%</strong> До начала обучения</li>
+                                    <li><strong>30%</strong> через 1 месяц после начала обучения</li>
+                                    <li><strong>30%</strong> еще через 1 месяц</li>
+                                </ol>
+                            </div>
+                            <div class="col-md-6">
+                                <p>На текущий момент способов оплаты программы существует ровно два:</p>
+                                <ol>
+                                    <li>Наличный расчет (при встрече)</li>
+                                    <li>Перечислить деньги на карту ПриватБанка (5168 7553 9296 3365 / Егошин Алексей; платеж только в гривне)</li>
+                                </ol>
+                                <p>Вариант №2 - наиболее удобный. Прошу при его использовании выслать на мой e-mail скан/фото подтверждение о переводе (<a href="mailto:alexey.egoshin@gmail.com">alexey.egoshin@gmail.com</a>)</p>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul>
+                                    <li><strong>Early Bird:</strong> до 15 декабря 2015 – скидка 10%</li>
+                                    <li><strong>New Year:</strong> до 7 января 2016 – скидка 5%</li>
+                                    <li><strong>Last Day:</strong> до 15 января 2016 – полная стоимость</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <p><strong>Если</strong></p>
+                                <ul>
+                                    <li>Вы хотите успеха и признания,</li>
+                                    <li>Вы победитель и драйвер по жизни,</li>
+                                    <li>у Вас есть большая и крутая цель,</li>
+                                    <li>Вы хотите по-взрослому управлять своей жизнью,</li>
+                                    <li>Вы готовы ради всего этого прикладывать усилия…</li>
+                                </ul>
+                                <p><strong>Записывайтесь в программу обучения!</strong></p>
+                            </div>
+                        </div><!-- /.row -->
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h4>До закрытия регистрации осталось</h4>
+                                <div class="timer text-primary">
+                                    <p class="time"></p>
+                                    <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
+                                </div>
+								<div>
+									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+								</div>
+                            </div>
+                        </div>
 					</div>
 				</section>
+
+                <footer>
+                    
+                </footer>
 			</div><!-- /#wrapper-->
 		</div><!-- /#page -->
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
