changed div class=col-md-4 form fundamental

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -169,13 +169,16 @@
 						</div><!-- /.row -->
 						<div class="row study-forms">
 							<div class="col-md-4 form fundamental">
-								<h3>Fundamentals</h3>
-								<div class="form-label">За 4 месяца</div>
+								<div class="topic">
+									<h3>Fundamentals</h3>
+									<div class="form-label">За 4 месяца</div>
+								</div>
+								
 								<ul>
 									<li>0 лет в отрасли</li>
 									<li>Вы не знакомы или слабо знакомы с IT</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
