--- a/public_html/index.html
+++ b/public_html/index.html
@@ -195,8 +195,10 @@
 								</div>
 							</div>
 							<div class="col-md-4 form senior">
-								<h3>Senior</h3>
-								<div class="form-label">За 3 месяца</div>
+								<div class="topic">
+									<h3>Senior</h3>
+									<div class="form-label">За 3 месяца</div>
+								</div>
 								<ul>
 									<li>1-3 года в отрасли</li>
 									<li>Вы уже работаете в IT и знакомы с этапами разработки и спецификой</li>
@@ -210,8 +212,10 @@
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
-								<h3>Expert</h3>
-								<div class="form-label">За 2 месяца</div>
+								<div class="topic">
+									<h3>Expert</h3>
+									<div class="form-label">За 2 месяца</div>
+								</div>
 								<ul>
 									<li>Более 3 лет в отрасли</li>
 									<li>Вы руководите проектами год и более</li>
@@ -531,8 +535,10 @@
                         </div><!-- /.row -->
                         <div class="row study-forms study-prices">
 							<div class="col-md-4 form fundamental">
-								<h3>Fundamentals</h3>
-								<div class="form-label">За 4 месяца</div>
+								<div class="topic">
+									<h3>Fundamentals</h3>
+									<div class="form-label">За 4 месяца</div>
+								</div>
 								<ul>
 									<li>208 часов</li>
 									<li>13 недель (4 месяца)</li>
@@ -543,8 +549,10 @@
 								</div>
 							</div>
 							<div class="col-md-4 form senior">
-								<h3>Senior</h3>
-								<div class="form-label">За 3 месяца</div>
+								<div class="topic">
+									<h3>Senior</h3>
+									<div class="form-label">За 3 месяца</div>
+								</div>
 								<ul>
 									<li>168 часов</li>
 									<li>11 недель (3 месяца)</li>
@@ -555,8 +563,10 @@
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
-								<h3>Expert</h3>
-								<div class="form-label">За 2 месяца</div>
+								<div class="topic">
+									<h3>Expert</h3>
+									<div class="form-label">За 2 месяца</div>
+								</div>
 								<ul>
 									<li>96 часов</li>
 									<li>6 недель (2 месяца)</li>
