added favicon, improved layout and footer

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,9 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 		<title>PM School</title>
-
         <link href='https://fonts.googleapis.com/css?family=Arimo&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -131,7 +130,7 @@
 									<li>Вы уже работаете в IT и знакомы с этапами разработки и спецификой</li>
 									<li>Вы не являетесь руководителем проектов или руководите менее года</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
@@ -148,7 +147,7 @@
 									<li>Вы руководите проектами год и более</li>
 									<li>Желаете ускорить свой карьерный рост или повысить эффективность своих проектов или групп проектов</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
@@ -175,18 +174,18 @@
                                 <p>Коммуникации, лидерство, тайм-менеджмент, работа с командой, типология личности, конфликты, убеждение и переговоры, проведение совещаний, собеседований, построение карьеры и многое другое.</p>
                             </div>
                         </div><!-- /.row -->
-                        <div class="row">
+                        <div class="row program">
                             <div class="col-md-4">
-                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#program">
                                     <i class="glyphicon glyphicon-education"></i> Подробная программа
                                 </button>
 
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                <div class="modal fade" id="program" tabindex="-1" role="dialog" aria-labelledby="programLabel">
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel">Подробная структура программы обучения</h4>
+                                                <h4 class="modal-title" id="programLabel">Подробная структура программы обучения</h4>
                                             </div>
                                             <div class="modal-body">
                                                 <p>Какие навыки Вы сможете добавить в свое резюме по окончанию обучения в программе</p>
@@ -372,7 +371,7 @@
                         </div><!-- /.row -->
                         <div class="row">
                             <div class="col-md-9">
-                                <dl>
+                                <dl class="dl-horizontal">
                                     <dt>Дмитрий:</dt>
                                     <dd>Крайне полезный тренинг для понимания процессов в самом начале и по ходу проекта. Очень полезны знания по оценке проекта, учету рисков, организации и использованию различной статистики по проекту. Буду использовать в своем проекте</dd>
                                     <dt>Игорь:</dt>
@@ -431,7 +430,7 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-3"></div>
+                            <div class="col-md-3 img"></div>
                             <div class="col-md-9">
 								<p>Предоставляется гарантия возврата 100% внесенных денег. Если Вас по какой-либо причине не устроят занятия/материалы/упражнения – Вы получите все внесенные деньги назад. Этим правом можно будет воспользоваться только в течение первого занятия. В то же время, воспользовавшись им, Вы потеряете возможность участия в любых будущих программах, событиях, курсах и мероприятиях от consultpm.com</p>
 							</div>
@@ -457,7 +456,7 @@
 									<li>13 недель (4 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1390</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
@@ -471,7 +470,7 @@
 									<li>11 недель (3 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1890</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
@@ -485,7 +484,7 @@
 									<li>6 недель (2 месяца)</li>
                                     <li class="price"><span class="currency">$</span>1990</li>
 								</ul>
-								<div>
+								<div class="button">
 									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
@@ -522,7 +521,7 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-6 col-md-offset-3 bottom-timer">
                                 <h4>До закрытия регистрации осталось</h4>
                                 <div class="timer text-primary">
                                     <p class="time"></p>
@@ -540,11 +539,53 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4 col-md-offset-4 social">
-								<a href="#"><i class="fontello">&#xe803;</i></a>
-								<a href="#"><i class="fontello">&#xe800;</i></a>
-								<a href="#"><i class="fontello">&#xe801;</i></a>
+                                <a href="#"><i class="fontello">&#xe803;</i><span>Facebook</span></a>
+								<a href="#"><i class="fontello">&#xe800;</i><span>VK</span></a>
+								<a href="#"><i class="fontello">&#xe801;</i><span>Google+</span></a>
 							</div>
 						</div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                &copy; 2016, ConsultPM
+                            </div>
+                            <div class="col-md-6 policy-link">
+                                <p><a href="#policy"  data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
+                            </div>
+
+
+                            <div class="modal fade" id="policy" tabindex="-1" role="dialog" aria-labelledby="policyLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                            <h4 class="modal-title" id="policyLabel">Политика конфиденциальности</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <h4>Политика конфиденциальности</h4>
+                                            <p>Ваша конфиденциальность очень важна для нас. Мы хотим, чтобы Ваша работа в Интернет по возможности была максимально приятной и полезной, и Вы совершенно спокойно использовали широчайший спектр информации, инструментов и возможностей, которые предлагает Интернет.</p>
+                                            <p>Личная информация Членов, собранная при регистрации (или в любое другое время) преимущественно используется для подготовки Продуктов или Услуг в соответствии с Вашими потребностями. Ваша информация не будет передана или продана третьим сторонам. Однако мы можем частично раскрывать личную информацию в особых случаях, описанных в «Согласии с рассылкой»</p>
+                                            <h5>Какие данные собираются на сайте</h5>
+                                            <p>При добровольной регистрации вы отправляете свое Имя и E-mail через форму регистрации.</p>
+                                            <h5>С какой целью собираются эти данные</h5>
+                                            <p>Имя используется для обращения лично к вам, а ваш e-mail для отправки вам писем рассылок, новостей тренинга, полезных материалов, коммерческих предложений.</p>
+                                            <p>Ваши имя и e-mail не передаются третьим лицам, ни при каких условиях кроме случаев, связанных с исполнением требований законодательства. Ваше имя и e-mail на защищенных серверах сервиса getresponse.com и используются в соответствии с его политикой конфиденциальности.</p>
+                                            <p>Вы можете отказаться от получения писем рассылки и удалить из базы данных свои контактные данные в любой момент, кликнув на ссылку для отписки, присутствующую в каждом письме.</p>
+                                            <h5>Как эти данные используются</h5>
+                                            <p>На сайте <a href="http://www.consultpm.com">www.consultpm.com</a> используются куки (Cookies) и данные о посетителях сервиса Google Analytics.</p>
+                                            <p>При помощи этих данных собирается информация о действиях посетителей на сайте с целью улучшения его содержания, улучшения функциональных возможностей сайта и, как следствие, создания качественного контента и сервисов для посетителей.</p>
+                                            <p>Вы можете в любой момент изменить настройки своего браузера так, чтобы браузер блокировал все файлы cookie или оповещал об отправке этих файлов. Учтите при этом, что некоторые функции и сервисы не смогут работать должным образом.</p>
+                                            <h5>Как эти данные защищаются</h5>
+                                            <p>Для защиты Вашей личной информации мы используем разнообразные административные, управленческие и технические меры безопасности. Наша Компания придерживается различных международных стандартов контроля, направленных на операции с личной информацией, которые включают определенные меры контроля по защите информации, собранной в Интернет.</p>
+                                            <p>Наших сотрудников обучают понимать и выполнять эти меры контроля, они ознакомлены с нашим Уведомлением о конфиденциальности, нормами и инструкциями.</p>
+                                            <p>Тем не менее, несмотря на то, что мы стремимся обезопасить Вашу личную информацию, Вы тоже должны принимать меры, чтобы защитить ее.</p>
+                                            <p>Мы настоятельно рекомендуем Вам принимать все возможные меры предосторожности во время пребывания в Интернете. Организованные нами услуги и веб-сайты предусматривают меры по защите от утечки, несанкционированного использования и изменения информации, которую мы контролируем. Несмотря на то, что мы делаем все возможное, чтобы обеспечить целостность и безопасность своей сети и систем, мы не можем гарантировать, что наши меры безопасности предотвратят незаконный доступ к этой информации хакеров сторонних организаций.</p>
+                                            <p>В случае изменения данной политики конфиденциальности вы сможете прочитать об этих изменениях на этой странице или, в особых случаях, получить уведомление на свой e-mail.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!-- /.modal -->
+
+                        </div>
 					</div>
                 </footer>
 			</div><!-- /#wrapper-->
